fixing the active links and the controller references

--- a/src/app/header/header.pug
+++ b/src/app/header/header.pug
@@ -5,8 +5,8 @@
 
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li(ng-class="{ active: $state.includes('teams') }")
+        li(ng-class="{ active: $state.params.controller == 'teams' }")
           a(ui-sref="mvc.default({controller: 'teams', action: 'showteams'})")     Teams
-        li(ng-class="{ active: $state.includes('players') }")
+        li(ng-class="{ active: $state.params.controller == 'players' }")
           a(ui-sref="mvc.default({controller: 'players', action: 'showplayers'})") Players
 
