--- a/src/app/header/header.pug
+++ b/src/app/header/header.pug
@@ -1,4 +1,4 @@
-.nav.navbar.navbar-inverse.navbar-fixed-top(ng-controller="HeaderController as vm")
+.nav.navbar.navbar-inverse.navbar-fixed-top
   .container-fluid
     .navbar-header
       a.navbar-brand(ui-sref="mvc.default({controller: 'teams', action: 'showteams'})") Major League Miruken
